# IsaLab-Os-Backend

./: .gitignore  Cargo.toml  Dockerfile  GUIA_BACKEND.html  README.md
documentacao/HTML/: GUIA_BACKEND.html  GUIA_DEPLOY_DOCKER.html  GUIA_DEPLOY_FRONTEND.html
documentacao/MD/: GUIA_BACKEND.md
migrations/: 20260614000000_initial_setup.sql  20260614000001_extend_structures.sql  20260614000002_create_servers_table.sql
src/: casaos.rs  handlers.rs  main.rs  npm.rs  pihole.rs
