[package]
name = "homelab-governance-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "sqlite" ] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
chrono = "0.4"
